--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,41 @@
-# Node
-node_modules
-npm-debug.log*
-pnpm-lock.yaml
-# Next.js
-.next
-out
-# Env / secrets
-.env
-.env.*
-# Prisma
-prisma/*.db
-prisma/*.db-journal
-# OS
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-Thumbs.db
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
