--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "postinstall": "prisma generate",
+    "prisma:migrate:deploy": "prisma migrate deploy",
     "build": "next build --turbopack",
+    "dev": "next dev --turbopack",
     "start": "next start",
-    "lint": "eslint",
-    "prisma:migrate:deploy": "prisma migrate deploy"
+    "lint": "eslint"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
